--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.15.11",
     "@mui/x-charts": "^6.19.5",
     "@tailwindcss/forms": "^0.5.7",
+    "axios": "^1.6.7",
     "chart.js": "^4.4.2",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
